--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,14 @@
     tools:context=".MainActivity" >
 
 
+	<Button
+		android:id="@+id/get_id"
+		android:text="查询产品ID"
+		android:layout_margin="10dp"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
     
 
 
