--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,16 @@
 		app:layout_constraintStart_toStartOf="parent"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"/>
+
+	<Button
+		android:id="@+id/get_version"
+		android:text="查询版本"
+		android:layout_marginStart="150dp"
+		android:layout_marginTop="10dp"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
     
 
 
