--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,58 @@
 		app:layout_constraintStart_toStartOf="parent"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"/>
-    
+
+	<TextView
+		android:id="@+id/info"
+		android:layout_marginStart="10dp"
+		android:layout_marginTop="100dp"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+
+	<TextView
+		android:id="@+id/o2"
+		android:textSize="30sp"
+		android:text="O2:"
+		android:layout_marginStart="50dp"
+		android:layout_marginTop="200dp"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+
+	<TextView
+		android:text="PR:"
+		android:id="@+id/pr"
+		android:textSize="30sp"
+		android:layout_marginStart="200dp"
+		android:layout_marginTop="200dp"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+
+	<TextView
+		android:text="PI:"
+		android:id="@+id/pi"
+		android:textSize="30sp"
+		android:layout_marginStart="350dp"
+		android:layout_marginTop="200dp"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+	<TextView
+		android:text="状态:"
+		android:id="@+id/state"
+		android:textSize="30sp"
+		android:layout_marginStart="500dp"
+		android:layout_marginTop="200dp"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
