--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
 
@@ -28,18 +28,17 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"/>
 
-	<TextView
-		android:text="PR:"
-		android:id="@+id/pr"
-		android:textSize="30sp"
-		android:layout_marginStart="200dp"
-		android:layout_marginTop="200dp"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
+
+	<Button
+		android:id="@+id/getO2"
+		android:text="获取血氧"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
-
-
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="68dp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintVertical_bias="0.498" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
